<resources>
    <string name="app_name">PopChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="start_message">Start a message</string>
    <string name="feedback_prompt">We would love to hear from you on how we can improve the app! Let us know what you are thinking!</string>
    <string name="feedback_hint">Write response here</string>
    <string name="submit">Submit</string>

    <string name="message">Messages</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_temp_map">Map</string>
</resources>
