<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="50sp"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:text="@string/feedback_prompt" />

    <EditText
        android:id="@+id/feedback"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:textSize="20sp"
        android:layout_below="@+id/prompt"
        android:hint="@string/feedback_hint"
        android:layout_marginTop="15sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/edittext_bg"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback"
        android:layout_alignParentEnd="true"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/submit" />

</RelativeLayout>